RESOLVED FIXED226455
Fix thread safety issues in PannerNode
https://bugs.webkit.org/show_bug.cgi?id=226455
Summary Fix thread safety issues in PannerNode
Chris Dumez
Reported 2021-05-30 23:57:38 PDT
Adopt thread safety annotations in PannerNode and fix bugs found by clang.
Attachments
Patch (22.33 KB, patch)
2021-05-31 00:10 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-05-31 00:10:26 PDT
EWS
Comment 2 2021-05-31 17:03:10 PDT
Committed r278284 (238321@main): <https://commits.webkit.org/238321@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430179 [details].
Radar WebKit Bug Importer
Comment 3 2021-05-31 17:04:17 PDT
Note You need to log in before you can comment on or make changes to this bug.